<resources>
    <string name="app_name">PlayListMaker</string>
    <string name="play_list">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="impart">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agree">Пользовательское соглашение</string>
    <string name="support_title_text">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_description_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
</resources>