<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingVertical="14dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:text="@string/play_list"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/black"
            android:inputType="textCapWords"/>

        <Button
            android:id="@+id/button_media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_library"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/black"
            android:inputType="textCapWords"/>

        <Button
            android:id="@+id/button_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_setting"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/black"
            android:inputType="textCapWords"/>


    </LinearLayout>

</LinearLayout>